WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138071
Images with usemap should not have a link state
https://bugs.webkit.org/show_bug.cgi?id=138071
Summary
Images with usemap should not have a link state
Benjamin Poulain
Reported
2014-10-25 19:18:00 PDT
Images with usemap should not have a link state
Attachments
Patch
(14.81 KB, patch)
2014-10-25 19:27 PDT
,
Benjamin Poulain
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-10-25 19:27:52 PDT
Created
attachment 240458
[details]
Patch
Andreas Kling
Comment 2
2014-10-26 12:53:23 PDT
Comment on
attachment 240458
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=240458&action=review
r=me
> Source/WebCore/ChangeLog:11 > + Unfortunatelly, the Accessibility code was relying on the wrong behavior
Unfortunately
> Source/WebCore/ChangeLog:27 > + More with its setter for clarity.
Move
Benjamin Poulain
Comment 3
2014-10-26 21:28:44 PDT
Committed
r175213
: <
http://trac.webkit.org/changeset/175213
>
Darin Adler
Comment 4
2014-10-27 09:36:42 PDT
Comment on
attachment 240458
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=240458&action=review
> Source/WebCore/accessibility/AccessibilityRenderObject.cpp:2458 > + if (node && is<HTMLImageElement>(*node) && !downcast<HTMLImageElement>(*node).fastGetAttribute(usemapAttr).isNull()) > + return ImageMapRole;
Writing !fastGetAttribute(x).isNull() is a more wordy roundabout way of writing fastHasAttribute(x); we should probably use fastHasAttribute instead.
Benjamin Poulain
Comment 5
2014-10-27 11:32:27 PDT
(In reply to
comment #4
)
> Comment on
attachment 240458
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=240458&action=review
> > > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:2458 > > + if (node && is<HTMLImageElement>(*node) && !downcast<HTMLImageElement>(*node).fastGetAttribute(usemapAttr).isNull()) > > + return ImageMapRole; > > Writing !fastGetAttribute(x).isNull() is a more wordy roundabout way of > writing fastHasAttribute(x); we should probably use fastHasAttribute instead.
Indeed, will fix.
Alexey Proskuryakov
Comment 6
2014-10-27 19:50:38 PDT
Ben landed the cleanup in <
https://trac.webkit.org/r175233
>, which broke many tests. Hopefully fixed in <
https://trac.webkit.org/r175237
> (untested).
Benjamin Poulain
Comment 7
2014-10-27 20:35:09 PDT
Arg, that was dumb :( Thanks for fixing Alexey.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug